# bazel-reproducable-grpc-issue

src/: .gitignore  BUILD.bazel  Gopkg.toml  WORKSPACE
src/example/: BUILD.bazel  rpc.proto  rpc_test.go
