# gazelle:ignore

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "example_proto",
    srcs = [
        "rpc.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",
    ],
)

go_proto_library(
    name = "example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogofast_grpc"],
    importpath = "github.com/kalbasit/bazel-reproducable-grpc-issue/src/example",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["rpc_test.go"],
    deps = [
        ":example_go_proto",
        "//vendor/github.com/gogo/protobuf/types:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
